active link and header background

--- a/css/style.css
+++ b/css/style.css
@@ -231,6 +231,16 @@
     bottom: 0;
   }
 
+  /* Active Link */
+  .active-link{
+    color: var(--first-color);
+  }
+
+  /* Change Background Header */
+  .scroll-header{
+    box-shadow: 0 -1px 4px rgba(0, 0, 0, .15);
+  }
+
   /*=== HOME ===*/
   .home__container{
     gap: 1rem;
