--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,36 @@
     }
 }
 
+/*=== VARIABLES DARK THEME ===*/
+body.dark-theme{
+    /* HSL color mode */
+    --first-color-second: hsl(var(--hue-color), 30%, 8%);
+    --title-color: hsl(var(--hue-color), 8%, 95%);
+    --text-color: hsl(var(--hue-color), 8%, 75%);
+    --input-color: hsl(var(--hue-color), 29%, 16%);
+    --body-color: hsl(var(--hue-color), 28%, 12%);
+    --container-color: hsl(var(--hue-color), 29%, 16%);
+    --scroll-bar-color: hsl(var(--hue-color), 12%, 48%);
+    --scroll-thumb-color: hsl(var(--hue-color), 12%, 36%);
+}
+
+/*=== BUTTON DARK/LIGHT ===*/
+.nav__btns{
+    display: flex;
+    align-items: center;
+}
+
+.change-theme{
+    font-size: 1.25rem;
+    color: var(--title-color);
+    margin-right: var(--mb-1);
+    cursor: pointer;
+}
+
+.change-theme:hover{
+    color: var(--first-color);
+}
+
 /*=== BASE ===*/
 * {
     box-sizing: border-box;
@@ -505,7 +535,47 @@
   }
 
   /*=== SCROLL UP ===*/
+  .scrollup{
+    position: fixed;
+    right: 1rem;
+    bottom: -20%;
+    background-color: var(--first-color);
+    opacity: .8;
+    padding: 0 .3rem;
+    border-radius: .4rem;
+    z-index: var(--z-tooltip);
+    transition: .4s;
+  }
+
+  .scrollup:hover{
+    background-color: var(--first-color-alt);
+  }
+
+  .scrollup__icon{
+    font-size: 1.5rem;
+    color: #fff;
+  }
   /*Scroll Up*/
+  .show-scroll{
+    bottom: 5rem;
+  }
+
+  /*=== SCROLL BAR ===*/
+  ::-webkit-scrollbar{
+    width: .60rem;
+    background-color: var(--scroll-bar-color);
+    border-radius: .5rem;
+  }
+
+  ::-webkit-scrollbar-thumb{
+    background-color: var(--scroll-thumb-color);
+    border-radius: .5rem;
+  }
+
+  ::-webkit-scrollbar-thumb:hover{
+    background-color: var(--text-color-light);
+  }
+
   /*=== MEDIA QUERIES ===*/
   /*Small Devices*/
   /*Medium Devices*/
