--- a/css/style.css
+++ b/css/style.css
@@ -578,8 +578,202 @@ body.dark-theme{
 
   /*=== MEDIA QUERIES ===*/
   /*Small Devices*/
+  @media screen and (max-width: 350px) {
+    .container{
+      margin-left: var(--mb-1);
+      margin-right: var(--mb-1);
+    }
+
+    .nav__menu{
+      padding: 2rem .25rem 4rem;
+    }
+
+    .nav__list{
+      gap: .5rem;
+      column-gap: 0;
+    }
+
+    .home__container{
+      grid-template-columns: .25fr 3fr;
+    }
+
+    .home__blob{
+      width: 180px;
+    }
+  }
+
   /*Medium Devices*/
+  @media screen and (min-width: 568px) {
+    .home__content{
+      grid-template-columns: max-content 1fr 1fr;
+    }
+
+    .home__data{
+      grid-column: initial;
+    }
+
+    .home__img{
+      order: 1;
+      justify-self: center;
+    }
+
+    .about__container, .portfolio__content, .contact__container, .footer__container{
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    .portfolio__content{
+      margin-bottom: var(--mb-2);
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    .container{
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    body{
+      margin: 0;
+    }
+
+    .section{
+      padding: 6rem 0 2rem;
+    }
+
+    .section__subtitle{
+      margin-bottom: 4rem;
+    }
+
+    .header{
+      top: 0;
+      bottom: initial;
+    }
+
+    .header,
+    .main,
+    .footer__container{
+      padding: 0 1rem;
+    }
+
+    .nav{
+      height: calc(var(--header-height) + 1.5rem);
+      column-gap: 1rem;
+    }
+
+    .nav__icon,
+    .nav__close,
+    .nav__toggle{
+      display: none;
+    }
+
+    .nav__list{
+      display: flex;
+      column-gap: 2rem;
+    }
+
+    .nav__menu{
+      margin-left: auto;
+    }
+
+    .change-theme{
+      margin: 0;
+    }
+
+    .home__container{
+      row-gap: 5rem;
+    }
+
+    .home__content{
+      padding-top: 5.5rem;
+      column-gap: 2rem;
+    }
+
+    .home__blob{
+      width: 270px;
+    }
+
+    .home__scroll{
+      display: block;
+    }
+
+    .home__scroll-button{
+      margin-left: 3rem;
+    }
+
+    .about__container{
+      column-gap: 5rem;
+    }
+
+    .about__img{
+      width: 350px;
+    }
+
+    .about__description{
+      text-align: initial;
+    }
+
+    .about__buttons{
+      justify-content: initial;
+    }
+
+    .portfolio__img{
+      width: 320px;
+    }
+
+    .portfolio__content{
+      align-items: center;
+    }
+
+    .footer__container{
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    .footer__bg{
+      padding: 3rem 0 3.5rem;
+    }
+
+    .footer__links{
+      flex-direction: row;
+      column-gap: 2rem;
+    }
+
+    .footer__socials{
+      justify-self: flex-end;
+    }
+
+    .footer__copy{
+      margin-top: 4.5rem;
+    }
+  }
+
   /*Large Devices*/
+  @media screen and (min-width: 1024px) {
+    .header,
+    .main,
+    .footer__container{
+      padding: 0;
+    }
+
+    .home__blob{
+      width: 320px;
+    }
+
+    .home__social{
+      transform: translateX(-6rem);
+    }
+
+    .portfolio__content{
+      column-gap: 5rem;
+    }
+
+    .contact__form{
+      width: 460px;
+    }
+
+    .contact__inputs{
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
   
 
 
