--- a/css/style.css
+++ b/css/style.css
@@ -478,6 +478,13 @@ body.dark-theme{
     padding: .25rem .5rem .5rem 0;
   }
 
+  .contact__btn-submit{
+    border: none;
+    outline: none;
+    color: transparent;
+    background-color: transparent;
+  }
+
   /*=== FOOTER ===*/
   .footer{
     padding-top: 2rem;
